Update pipeline zztest-canary-deployment

--- a/.harness/zztestcanarydeployment.yaml
+++ b/.harness/zztestcanarydeployment.yaml
@@ -27,6 +27,9 @@ pipeline:
                       userGroups:
                         - account._account_all_users
                     approverInputs: []
+                  when:
+                    stageStatus: Failure
+                  failureStrategies: []
         tags: {}
     - stage:
         name: Provision Infrastructure
