Update pipeline zztest-canary-deployment

--- a/.harness/zztestcanarydeployment.yaml
+++ b/.harness/zztestcanarydeployment.yaml
@@ -178,3 +178,8 @@ pipeline:
                 - AllErrors
               action:
                 type: StageRollback
+        variables:
+          - name: name
+            type: String
+            description: ""
+            value: hello-world
