Update inputset github-push-dev

--- a/.harness/githubpushdev.yaml
+++ b/.harness/githubpushdev.yaml
@@ -1,6 +1,7 @@
 inputSet:
   identifier: "githubpushdev"
   name: "github-push-dev"
+  tags: {}
   orgIdentifier: "default"
   projectIdentifier: "tiger"
   pipeline:
