--- a/.harness/zztestcanarydeployment.yaml
+++ b/.harness/zztestcanarydeployment.yaml
@@ -123,7 +123,8 @@ pipeline:
           environment:
             environmentRef: cdtooling2eksv2
             deployToAll: false
-            infrastructureDefinitions: <+input>
+            infrastructureDefinitions:
+              - identifier: harnessdev
           execution:
             steps:
               - stepGroup:
