Update inputset github-push-dev

--- a/.harness/githubpushdev.yaml
+++ b/.harness/githubpushdev.yaml
@@ -30,4 +30,4 @@ inputSet:
                       - identifier: "http-echo"
                         type: "DockerRegistry"
                         spec:
-                          tag: "0.0.1"
+                          tag: "0.0.2-alpine"
