--- a/.harness/zztestcanarydeployment.yaml
+++ b/.harness/zztestcanarydeployment.yaml
@@ -53,7 +53,7 @@ pipeline:
                             gitFetchType: Branch
                             connectorRef: mfjhellman
                             repoName: harness-test-app
-                            branch: jared-wip
+                            branch: main
                             folderPath: deploy/terraform
                       secretManagerRef: harnessSecretManager
                       varFiles:
@@ -66,7 +66,7 @@ pipeline:
                                 spec:
                                   gitFetchType: Branch
                                   repoName: harness-test-app
-                                  branch: jared-wip
+                                  branch: main
                                   paths:
                                     - deploy/terraform/vars/<+stage.variables.target_env>.tfvars
                                   connectorRef: mfjhellman
@@ -153,7 +153,7 @@ pipeline:
                                 paths:
                                   - deploy/k8s/base/values.yaml
                                 repoName: harness-test-app
-                                branch: jared-wip
+                                branch: main
                   timeout: 10m
                   failureStrategies: []
               - stepGroup:
