--- a/.harness/zztestcanarydeployment.yaml
+++ b/.harness/zztestcanarydeployment.yaml
@@ -173,6 +173,20 @@ pipeline:
                           skipDryRun: false
                         failureStrategies: []
                     - step:
+                        type: ShellScript
+                        name: sleep
+                        identifier: sleep
+                        spec:
+                          shell: Bash
+                          onDelegate: true
+                          source:
+                            type: Inline
+                            spec:
+                              script: sleep 60
+                          environmentVariables: []
+                          outputVariables: []
+                        timeout: 10m
+                    - step:
                         type: Verify
                         name: Verify via New Relic
                         identifier: Verify_via_New_Relic
