--- a/.harness/zztestcanarydeployment.yaml
+++ b/.harness/zztestcanarydeployment.yaml
@@ -45,7 +45,7 @@ pipeline:
                   spec:
                     configuration:
                       command: Apply
-                      workspace: <+stage.variables.target_env>
+                      workspace: zztest-<+stage.variables.target_env>
                       configFiles:
                         store:
                           type: Github
@@ -72,6 +72,7 @@ pipeline:
                                   connectorRef: mfjhellman
                     provisionerIdentifier: zztest-<+stage.variables.target_env>
                   timeout: 10m
+                  failureStrategies: []
               - step:
                   type: HarnessApproval
                   name: Approve Plan
