--- a/.harness/zztestcanarydeployment.yaml
+++ b/.harness/zztestcanarydeployment.yaml
@@ -137,6 +137,7 @@ pipeline:
                   spec:
                     configuration:
                       command: Apply
+                      workspace: zztest-<+stage.spec.infrastructure>
                       configFiles:
                         store:
                           type: Github
@@ -147,7 +148,47 @@ pipeline:
                             branch: main
                             folderPath: deploy/terreform
                       secretManagerRef: harnessSecretManager
-                    provisionerIdentifier: zztest
+                      varFiles:
+                        - varFile:
+                            type: Remote
+                            identifier: target vars
+                            spec:
+                              store:
+                                type: Github
+                                spec:
+                                  gitFetchType: Branch
+                                  repoName: harness-test-app
+                                  branch: main
+                                  paths:
+                                    - deploy/terraform/vars/<+stage.spec.infrastructure>.tfvars
+                                  connectorRef: mfjhellman
+                    provisionerIdentifier: zztest-<+stage.spec.infrastructure>
+                  timeout: 10m
+              - step:
+                  type: HarnessApproval
+                  name: Approve Plan
+                  identifier: Approve_Plan
+                  spec:
+                    approvalMessage: Review the plan to make sure all changes are expected.
+                    includePipelineExecutionHistory: true
+                    approvers:
+                      userGroups:
+                        - account._account_all_users
+                      minimumCount: 1
+                      disallowPipelineExecutor: false
+                    approverInputs: []
+                  timeout: 1d
+                  when:
+                    stageStatus: Failure
+                  failureStrategies: []
+              - step:
+                  type: TerraformApply
+                  name: Terraform Apply
+                  identifier: Terraform_Apply
+                  spec:
+                    configuration:
+                      type: InheritFromPlan
+                    provisionerIdentifier: zztest-<+stage.spec.infrastructure>
                   timeout: 10m
             rollbackSteps: []
         tags: {}
