--- a/.harness/zztestcanarydeployment.yaml
+++ b/.harness/zztestcanarydeployment.yaml
@@ -31,99 +31,6 @@ pipeline:
         when:
           pipelineStatus: Failure
     - stage:
-        name: Provision Infra
-        identifier: Provision_Infra
-        description: ""
-        type: Deployment
-        spec:
-          deploymentType: Kubernetes
-          service:
-            serviceRef: zztest
-            serviceInputs:
-              serviceDefinition:
-                type: Kubernetes
-                spec:
-                  artifacts:
-                    primary:
-                      primaryArtifactRef: <+input>
-                      sources: <+input>
-          environment:
-            environmentRef: <+input>
-            deployToAll: false
-            environmentInputs: <+input>
-            serviceOverrideInputs: <+input>
-            infrastructureDefinitions: <+input>
-          execution:
-            steps:
-              - step:
-                  type: TerraformPlan
-                  name: Terraform Plan
-                  identifier: Terraform_Plan
-                  spec:
-                    configuration:
-                      command: Apply
-                      workspace: zztest-<+stage.spec.infrastructure.name>
-                      configFiles:
-                        store:
-                          type: Github
-                          spec:
-                            gitFetchType: Branch
-                            connectorRef: mfjhellman
-                            repoName: harness-test-app
-                            branch: main
-                            folderPath: deploy/terreform
-                      secretManagerRef: harnessSecretManager
-                      varFiles:
-                        - varFile:
-                            type: Remote
-                            identifier: target vars
-                            spec:
-                              store:
-                                type: Github
-                                spec:
-                                  gitFetchType: Branch
-                                  repoName: harness-test-app
-                                  branch: main
-                                  paths:
-                                    - deploy/terraform/vars/<+stage.spec.infrastructure.name>.tfvars
-                                  connectorRef: mfjhellman
-                    provisionerIdentifier: zztest-<+stage.spec.infrastructure.name>
-                  timeout: 10m
-              - step:
-                  type: HarnessApproval
-                  name: Approve Plan
-                  identifier: Approve_Plan
-                  spec:
-                    approvalMessage: Review the plan to make sure all changes are expected.
-                    includePipelineExecutionHistory: true
-                    approvers:
-                      userGroups:
-                        - account._account_all_users
-                      minimumCount: 1
-                      disallowPipelineExecutor: false
-                    approverInputs: []
-                  timeout: 1d
-                  when:
-                    stageStatus: Failure
-                  failureStrategies: []
-              - step:
-                  type: TerraformApply
-                  name: Terraform Apply
-                  identifier: Terraform_Apply
-                  spec:
-                    configuration:
-                      type: InheritFromPlan
-                    provisionerIdentifier: zztest-<+stage.spec.infrastructure>
-                  timeout: 10m
-            rollbackSteps: []
-        tags: {}
-        failureStrategies:
-          - onFailure:
-              errors:
-                - AllErrors
-              action:
-                type: StageRollback
-    - stage:
         name: Canary Deploy
         identifier: Canary_Deploy
         description: ""
@@ -148,38 +55,85 @@ pipeline:
             infrastructureDefinitions: <+input>
           execution:
             steps:
-              - step:
-                  type: K8sApply
-                  name: Manage Base Resources
-                  identifier: Manage_Base_Resources
-                  spec:
-                    filePaths:
-                      - base/namespace.yaml
-                      - base/ingress.yaml
-                      - base/service.yaml
-                    skipDryRun: false
-                    skipSteadyStateCheck: false
-                    skipRendering: false
-                    overrides:
-                      - manifest:
-                          identifier: " base"
-                          type: Values
-                          spec:
-                            store:
-                              type: Github
-                              spec:
-                                connectorRef: mfjhellman
-                                gitFetchType: Branch
-                                paths:
-                                  - deploy/k8s/base/values.yaml
-                                repoName: harness-test-app
-                                branch: main
-                  timeout: 10m
-                  failureStrategies: []
+              - stepGroup:
+                  name: Provision Infrastructure
+                  identifier: Provision_Infrastructure
+                  steps:
+                    - step:
+                        type: TerraformPlan
+                        name: Terraform Plan
+                        identifier: Terraform_Plan
+                        spec:
+                          configuration:
+                            command: Apply
+                            workspace: zztest-<+stage.variables.target_env>
+                            configFiles:
+                              store:
+                                type: Github
+                                spec:
+                                  gitFetchType: Branch
+                                  connectorRef: mfjhellman
+                                  repoName: harness-test-app
+                                  branch: <+input>
+                                  folderPath: terraform/deploy
+                            secretManagerRef: harnessSecretManager
+                            varFiles:
+                              - varFile:
+                                  type: Remote
+                                  identifier: env vars
+                                  spec:
+                                    store:
+                                      type: Github
+                                      spec:
+                                        gitFetchType: Branch
+                                        repoName: harness-test-app
+                                        branch: <+input>
+                                        paths:
+                                          - deploy/terraform/vars/<+targetadeploy/terraform/vars/<+stage.variables.target_env>.tfvars
+                                        connectorRef: mfjhellman
+                          provisionerIdentifier: zztest-<+stage.variables.target_env>
+                        timeout: 10m
+                    - step:
+                        type: TerraformApply
+                        name: Terraform Apply
+                        identifier: Terraform_Apply
+                        spec:
+                          configuration:
+                            type: InheritFromPlan
+                          provisionerIdentifier: zztest-<+stage.variables.target_env>
+                        timeout: 10m
               - stepGroup:
                   name: Canary Deployment
                   identifier: canaryDepoyment
                   steps:
+                    - step:
+                        type: K8sApply
+                        name: Manage Base Resources
+                        identifier: Manage_Base_Resources
+                        spec:
+                          filePaths:
+                            - base/namespace.yaml
+                            - base/ingress.yaml
+                            - base/service.yaml
+                          skipDryRun: false
+                          skipSteadyStateCheck: false
+                          skipRendering: false
+                          overrides:
+                            - manifest:
+                                identifier: " base"
+                                type: Values
+                                spec:
+                                  store:
+                                    type: Github
+                                    spec:
+                                      connectorRef: mfjhellman
+                                      gitFetchType: Branch
+                                      paths:
+                                        - deploy/k8s/base/values.yaml
+                                      repoName: harness-test-app
+                                      branch: main
+                        timeout: 10m
+                        failureStrategies: []
                     - step:
                         name: Canary Deployment
                         identifier: canaryDeployment
@@ -286,3 +240,7 @@ pipeline:
             type: String
             description: ""
             value: hello-world
+          - name: target_env
+            type: String
+            description: ""
+            value: <+input>
