Update pipeline zztest-canary-deployment

--- a/.harness/zztestcanarydeployment.yaml
+++ b/.harness/zztestcanarydeployment.yaml
@@ -89,7 +89,7 @@ pipeline:
                                         repoName: harness-test-app
                                         branch: <+input>
                                         paths:
-                                          - deploy/terraform/vars/<+targetadeploy/terraform/vars/<+stage.variables.target_env>.tfvars
+                                          - deploy/terraform/vars/<+stage.variables.target_env>.tfvars
                                         connectorRef: mfjhellman
                           provisionerIdentifier: zztest<+stage.variables.target_env>
                         timeout: 10m
