--- a/.harness/primage.yaml
+++ b/.harness/primage.yaml
@@ -23,7 +23,7 @@ inputSet:
                       - identifier: "http-echo"
                         type: "DockerRegistry"
                         spec:
-                          tag: "<+input>"
+                          tag: "<+trigger.artifact.build>"
           environment:
             environmentRef: "cdtooling2eksv2"
             infrastructureDefinitions:
