--- a/.harness/zztestcanarydeployment.yaml
+++ b/.harness/zztestcanarydeployment.yaml
@@ -60,6 +60,23 @@ pipeline:
                   identifier: Provision_Infrastructure
                   steps:
                     - step:
+                        type: ShellScript
+                        name: Generate Provisioner ID
+                        identifier: Generate_Provisioner_ID
+                        spec:
+                          shell: Bash
+                          onDelegate: true
+                          source:
+                            type: Inline
+                            spec:
+                              script: provisioner_id=$RANDOM
+                          environmentVariables: []
+                          outputVariables:
+                            - name: provisioner_id
+                              type: String
+                              value: provisioner_id
+                        timeout: 10m
+                    - step:
                         type: TerraformPlan
                         name: Terraform Plan
                         identifier: Terraform_Plan
@@ -91,7 +108,7 @@ pipeline:
                                         paths:
                                           - deploy/terraform/vars/<+stage.variables.target_env>.tfvars
                                         connectorRef: mfjhellman
-                          provisionerIdentifier: <+pipeline.executionId>
+                          provisionerIdentifier: <+execution.steps.Provision_Infrastructure.steps.Generate_Provisioner_ID.output.outputVariables.provisioner_id>
                         timeout: 10m
                     - step:
                         type: TerraformApply
@@ -100,7 +117,7 @@ pipeline:
                         spec:
                           configuration:
                             type: InheritFromPlan
-                          provisionerIdentifier: <+pipeline.executionId>
+                          provisionerIdentifier: <+execution.steps.Provision_Infrastructure.steps.Generate_Provisioner_ID.output.outputVariables.provisioner_id>
                         timeout: 10m
               - stepGroup:
                   name: Canary Deployment
